<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_checklist_home">

    <fragment
        android:id="@+id/nav_checklist_home"
        android:name="com.cavalinho.cavalinhoapp.view.ChecklistHomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_checklist_home">
        <action
            android:id="@+id/action_nav_checklist_home_to_nav_checklist_question"
            app:destination="@id/nav_checklist_questions" />
    </fragment>

    <fragment
        android:id="@+id/nav_checklist_questions"
        android:name="com.cavalinho.cavalinhoapp.view.ChecklistQuestionsFragment"
        android:label="@string/menu_checklist"
        tools:layout="@layout/fragment_checklist_questions">
        <action
            android:id="@+id/action_nav_checklist_questions_to_nav_checklist_home"
            app:destination="@id/nav_checklist_home" />
        <action
            android:id="@+id/action_nav_checklist_questions_to_itself"
            app:destination="@id/nav_checklist_questions" />
    </fragment>

    <fragment
        android:id="@+id/nav_messages_home"
        android:name="com.cavalinho.cavalinhoapp.view.MessagesHomeFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages_home">
        <action
            android:id="@+id/action_nav_messages_home_to_nav_messages_all"
            app:destination="@id/nav_messages_all" />
    </fragment>

    <fragment
        android:id="@+id/nav_messages_all"
        android:name="com.cavalinho.cavalinhoapp.view.MessagesAllFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages_all">
        <action
            android:id="@+id/action_nav_messages_all_to_nav_messages_one"
            app:destination="@id/nav_messages_one" />
    </fragment>

    <fragment
        android:id="@+id/nav_messages_one"
        android:name="com.cavalinho.cavalinhoapp.view.MessagesOneFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages_one" />

</navigation>